<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">



    <TextView
        android:id="@+id/tv_titulo_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:background="@color/verde"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        android:paddingStart="26dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correcto"
        android:textColor="@color/azul"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:backgroundTint="@color/verde"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>